Revert "Another attempt to fix weird font sizing in tables on mobile"
This reverts commit fb6551ea50dcdffe28145ec2f74482d2022e4f6d.

--- a/product_site/css/style.css
+++ b/product_site/css/style.css
@@ -1,8 +1,6 @@
 body {
     background-color: #ffe9d4;
     max-width:100ch;
-    text-size-adjust: none;
-    -webkit-text-size-adjust: none;
 }
 
 h1 {
